--- a/core/components/skeletonx/elements/chunks/jsFooter.chunk.html
+++ b/core/components/skeletonx/elements/chunks/jsFooter.chunk.html
@@ -1,4 +1,5 @@
-<script src="assets/libs/foundation/js/foundation.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="assets/js/dist/main.min.js"></script>
 
 <script>
 	$(document).foundation();
