Indent using spaces & Trim trailing whitespace
content untouched

--- a/core/components/skeletonx/elements/chunks/nav.chunk.html
+++ b/core/components/skeletonx/elements/chunks/nav.chunk.html
@@ -1,4 +1,4 @@
-<!-- navigation -->
+<!-- Navigation -->
 <nav>
     <ul class="inline-list">
         [[getResources? &tpl=`nav.item` &sortby=`{"menuindex":"ASC"}` &depth=`0` &limit=`30` &parents=`0`]]
