Calling chunks and cleaning

--- a/core/components/skeletonx/elements/chunks/html_head.chunk.html
+++ b/core/components/skeletonx/elements/chunks/html_head.chunk.html
@@ -4,16 +4,16 @@
     <title>[[*id:isnot=`[[++site_start]]`:then=`[[*longtitle:default=`[[*pagetitle]]`]] | `]][[++site_name]]</title>
     <meta name="description" content="[[*description:default=`[[*introtext]]`]]">
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link type="text/plain" rel="author" href="humans.txt" />
+    [[- <link rel="alternate" type="application/rss+xml" title="Follow this website with RSS" href="rss.xml" /> ]]
 
-    [[$social-meta]]
+    [[- $social-meta]]
 
     <meta name="robots" content="all,follow,index" />
     <meta name="googlebot" content="index,follow,snippet" />
 
     <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
-    [[$jsDefault]]
 
     [[- <!-- nonSASS stylesheet -->
         <!--
@@ -21,8 +21,7 @@
             <link rel="stylesheet" href="assets/template/style.css" />
         -->
     ]]
-
-    <!-- SASS stylesheet -->
+    
     <link rel="stylesheet" href="assets/css/screen.css" />
 
     [[- <!-- Print style / IE style -->
