--- a/core/components/skeletonx/elements/templates/BasicTemplate.template.html
+++ b/core/components/skeletonx/elements/templates/BasicTemplate.template.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="[[++cultureKey:default=`[[*context_key]]`]]">
     <head>
-        [[$htmlHead]]
+        [[$html_head]]
     </head>
     <body>
-        [[$bodyHead]]
+        [[$header]]
 
         <!-- Content -->
         <div class="row">
