--- a/core/components/skeletonx/elements/chunks/footer.chunk.html
+++ b/core/components/skeletonx/elements/chunks/footer.chunk.html
@@ -1,7 +1,7 @@
 <footer class="row">
     <div class="large-12 columns">
         <hr />
-        &copy; [[CopyrightYear? &start=`modx`]] MyCompany. Powered by MODx, Foundation and SkeletonX ;)
+        &copy; [[getCopyrightYear? &start=`modx`]] MyCompany. Powered by MODx, Foundation and SkeletonX ;)
     </div>
 </footer>
 
