--- a/core/components/skeletonx/elements/chunks/analytics.chunk.html
+++ b/core/components/skeletonx/elements/chunks/analytics.chunk.html
@@ -1,3 +1,4 @@
+[[++site_production:isnot=`0`:then=`
 <!-- Google Analytics -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -8,3 +9,4 @@
     ga('create', 'UA-XXXXXXX-X', 'domain.com');
     ga('send', 'pageview');
 </script>
+`]]
