--- a/core/components/skeletonx/elements/chunks/html_head.chunk.html
+++ b/core/components/skeletonx/elements/chunks/html_head.chunk.html
@@ -1,27 +1,19 @@
     <meta charset="utf-8" />
-    <base href="[[!++site_url]]" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[[*id:isnot=`[[++site_start]]`:then=`[[*longtitle:default=`[[*pagetitle]]`]] | `]][[++site_name]]</title>
     <meta name="description" content="[[*description:default=`[[*introtext]]`]]">
-
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-    <link type="text/plain" rel="author" href="humans.txt" />
-    [[- <link rel="alternate" type="application/rss+xml" title="Follow this website with RSS" href="rss.xml" /> ]]
-
-    [[- $social-meta]]
-
-    <meta name="robots" content="all,follow,index" />
+    <meta name="robots" content="all,index,follow" />
     <meta name="googlebot" content="index,follow,snippet" />
 
-    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
+    <base href="[[!++site_url]]" />
 
-    [[- <!-- nonSASS stylesheet -->
-        <!--
-            <link rel="stylesheet" href="assets/libs/foundation/css/foundation.css" />
-            <link rel="stylesheet" href="assets/template/style.css" />
-        -->
-    ]]
-    
+    <link rel="author" type="text/plain" href="humans.txt" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+
+    [[- <link rel="alternate" type="application/rss+xml" title="Follow this website with RSS" href="rss.xml" /> ]]
+    [[- $social-meta]]
+
     <link rel="stylesheet" href="assets/css/screen.css" />
 
     [[- <!-- Print style / IE style -->
