--- a/core/components/skeletonx/elements/chunks/html_head.chunk.html
+++ b/core/components/skeletonx/elements/chunks/html_head.chunk.html
@@ -9,7 +9,8 @@
     <base href="[[!++site_url]]" />
 
     <link rel="author" type="text/plain" href="humans.txt" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    
+    [[$favicons]]
 
     [[- <link rel="alternate" type="application/rss+xml" title="Follow this website with RSS" href="rss.xml" /> ]]
     [[- $social-meta]]
