--- a/core/components/skeletonx/elements/chunks/analytics.chunk.html
+++ b/core/components/skeletonx/elements/chunks/analytics.chunk.html
@@ -6,7 +6,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-XXXXXXX-X', 'domain.com');
+    ga('create', 'UA-XXXXXXX-X', 'auto');
     ga('send', 'pageview');
 </script>
 `]]
