--- a/core/components/skeletonx/elements/chunks/form_contact.confirmation.chunk.html
+++ b/core/components/skeletonx/elements/chunks/form_contact.confirmation.chunk.html
@@ -1,4 +1,4 @@
-<h2>Contact from your website</h2><br />
+<h2>Contact from your website [[++site_name]]</h2><br />
 <strong>Company:</strong> [[+company]]<br />
 <strong>Contact:</strong> [[+contact]]<br />
 <strong>Country:</strong> [[+country]]<br />
